qa: fixing footer alignment

--- a/css/site.scss
+++ b/css/site.scss
@@ -508,7 +508,7 @@ ul.tag-list li.last{margin-right: 0px;}
 
 .footer{
     footer.panel{
-        width:265px;
+        width:270px;
         margin: 0 auto;
     }
     /*removes apple link <a> color*/
